@@ -1,0 +1,28 @@
+*.pyc
+*.pyo
+*.html
+*.tmp*
+*.mo
+*.egg
+*.EGG
+*.egg-info
+*.EGG-INFO
+*.log
+.*.cfg
+.coverage
+bin/
+build/
+develop-eggs/
+downloads/
+eggs/
+fake-eggs/
+htmlcov/
+include/
+lib/
+parts/
+dist/
+var/
+!src/Products
+pip-selfcheck.json
+
+
